Fix emoji zoom on hover overflow visibility

--- a/app/javascript/flavours/glitch/styles/urusai-fixes.scss
+++ b/app/javascript/flavours/glitch/styles/urusai-fixes.scss
@@ -12,3 +12,7 @@
   height: 24px;
   width: 24px;
 }
+
+.status__content:not(.status__content--collapsed) {
+  overflow: visible;
+}
